working on household record page

--- a/census/templates/census/census-household-record.html
+++ b/census/templates/census/census-household-record.html
@@ -188,6 +188,15 @@
                 <div role="main" class="ui-content">
                     <h2>Ajoutez l'Adresse du M&eacute;nage</h2>
                     <div data-role="fieldcontain">
+                        <label for="select_province_1">Province:</label>
+                        <select name="select_province_1" id="select_province_1" data-native-menu="false">
+                            <option>Choisissez la province</option>
+                            <option>un  cas </option>
+                            <option>deux  cas </option>
+                            <option>trois  cas </option>
+                        </select>
+                    </div>
+                    <div data-role="fieldcontain">
                         <label for="select_province">Province:</label>
                         <select name="select_province" id="select_province" data-native-menu="false">
                             <option>Choisissez la province</option>
@@ -254,22 +263,46 @@
                         <label for="last_name">Nom:</label>
                         <input type="text" name="last_name" id="last_name" value="" />
                     </div>
-                    <div class="ui-field-contain">
+                    <div data-role="fieldcontain">
                         <label for="head_household_link">Lien avec le Chef de M&eacute;nage:</label>
                         <select name="head_household_link" id="head_household_link" data-native-menu="false">
-                            <option>Choisissez le lien avec le Chef de M&eacute;nage </option>
+                            <option>Choisissez le lien avec le Chef de M&eacute;nage</option>
+                            <option value="1">Chef de Ménage</option>
+                            <option value="2">Conjoint du Chef de Ménage</option>
+                            <option value="3">Père ou Mère</option>
+                            <option value="4">Fils ou Fille</option>
+                            <option value="5">Frère ou Soeur</option>
+                            <option value="6">Neveu ou Nièce</option>
+                            <option value="7">Autre Parent</option>
+                            <option value="8">Aucun Lien</option>
                         </select>
                     </div>
                     <div class="ui-field-contain">
                         <label for="marrital_status">Statut matrimonial:</label>
                         <select name="marrital_status" id="marrital_status" class="marr_status" data-native-menu="false">
                             <option>Choisissez le statut matrimonial</option>
+                            <option value="1">Célibataire</option>
+                            <option value="2">Union Libre</option>
+                            <option value="3">Marié avec une Femme</option>
+                            <option value="4">Marié avec deux Femmes</option>
+                            <option value="5">Marié avec plud de deux Femmes</option>
+                            <option value="6">Séparé(e)</option>
+                            <option value="7">Divorcé(e)</option>
+                            <option value="8">Veuf(ve)</option>
                         </select>
                     </div>
                     <div class="ui-field-contain">
                         <label for="marriage_type">Type de mariage:</label>
                         <select name="marriage_type" id="marriage_type" class="marr_type" data-native-menu="false">
                             <option>Choisissez le type de mariage</option>
+                            <option value="1">Mariage Légal</option>
+                            <option value="2">Mariage Coutumier</option>
+                            <option value="3">Mariage Religieux</option>
+                            <option value="4">Mariage Légal et Coutumier</option>
+                            <option value="5">Mariage Légal et Religieux</option>
+                            <option value="6">Coutumier et Religieux</option>
+                            <option value="7">Coutumier, Religieux et Légal</option>
+                            <option value="8">Néant</option>
                         </select>
                     </div>
                     <p>
@@ -413,13 +446,29 @@
                     <div class="ui-field-contain">
                         <label for="occupation_status">Status de l'emploi:</label>
                         <select name="occupation_status" id="occupation_status" data-native-menu="false">
-                            <option>Choisissez le status de l'emploi</option>
+                            <option value="">Choisissez le status de l'emploi</option>
+                            <option value="1">Occupé</option>
+                            <option value="2">Chômeur</option>
+                            <option value="3">En quête du premier emploi</option>
+                            <option value="4">Ménagère</option>
+                            <option value="5">Étudiant ou Élève</option>
+                            <option value="6">Retraité</option>
+                            <option value="7">Rentier</option>
+                            <option value="8">Autre inactif</option>
                         </select>
                     </div>
                     <div class="ui-field-contain">
                         <label for="occupation_situation">Situation de l'emploi:</label>
                         <select name="occupation_situation" id="occupation_situation" data-native-menu="false">
                             <option>Choisissez la situation de l'emploi</option>
+                            <option value="1">Employeur</option>
+                            <option value="2">Salarié du Public</option>
+                            <option value="3">Salarié du Privé</option>
+                            <option value="4">Travailleur à la Tâche</option>
+                            <option value="5">Coopérative</option>
+                            <option value="6">Indépendant</option>
+                            <option value="7">Aide Familiale</option>
+                            <option value="8">Apprenti</option>
                         </select>
                     </div>
                     <div class="ui-field-contain">
@@ -430,12 +479,29 @@
                         <label for="religion">Religion:</label>
                         <select name="religion" id="religion" data-native-menu="false">
                             <option>Choisissez la religion</option>
+                            <option value="1">Catholique</option>
+                            <option value="2">Méthodiste</option>
+                            <option value="3">Protestant</option>
+                            <option value="4">Kimbanguiste</option>
+                            <option value="5">Réveil</option>
+                            <option value="6">Musulman</option>
+                            <option value="7">Autre</option>
+                            <option value="0">Sans Religion</option>
                         </select>
                     </div>
                     <div class="ui-field-contain">
                         <label for="handicap">Type de l'handicap:</label>
                         <select name="handicap" id="handicap" data-native-menu="false">
                             <option>Choisissez le type d'handicap</option>
+                            <option value="A">Sans Handicap</option>
+                            <option value="B">Sourd</option>
+                            <option value="C">Non Voyant</option>
+                            <option value="D">Muet</option>
+                            <option value="E">Sourd-Muet</option>
+                            <option value="F">Bègue</option>
+                            <option value="G">Albinos</option>
+                            <option value="H">Handicap des Membres Inférieurs</option>
+                            <option value="I">Handicap des Membres Supérieurs</option>
                         </select>
                     </div>
                     <p>
@@ -529,21 +595,21 @@ CensusHouseholdRecord.get_provinces_choices("select_province", "{% url 'census_a
 
 CensusHouseholdRecord.get_provinces_choices("birth_province", "{% url 'census_api:provinces' %}");
 
-ResidentRecord.get_head_household_link_choices("", "{% url 'census_api:head_household_links' %}");
+//ResidentRecord.get_head_household_link_choices("", "{% url 'census_api:head_household_links' %}");
 
-ResidentRecord.get_marrital_status_choices("", "{% url 'census_api:marrital_status_codes' %}");
+//ResidentRecord.get_marrital_status_choices("", "{% url 'census_api:marrital_status_codes' %}");
 
-ResidentRecord.get_marrital_type_choices("", "{% url 'census_api:marriage_type_codes' %}");
+//ResidentRecord.get_marrital_type_choices("", "{% url 'census_api:marriage_type_codes' %}");
 
-{# ResidentRecord.get_highest_diploma_choices(""); #}
+// ResidentRecord.get_highest_diploma_choices("");
 
-ResidentRecord.get_occupation_status_choices("", "{% url 'census_api:occup_status_codes' %}");
+//ResidentRecord.get_occupation_status_choices("", "{% url 'census_api:occup_status_codes' %}");
 
-ResidentRecord.get_occupation_situation_choices("", "{% url 'census_api:occup_situation_codes' %}");
+//ResidentRecord.get_occupation_situation_choices("", "{% url 'census_api:occup_situation_codes' %}");
 
-ResidentRecord.get_religion_choices("", "{% url 'census_api:religion_codes' %}");
+//ResidentRecord.get_religion_choices("", "{% url 'census_api:religion_codes' %}");
 
-{# ResidentRecord.get_handicap_choices(""); #}
+//ResidentRecord.get_handicap_choices(""); 
 
 $(document).on("click", ".more_resident", function(ev) {
         ev.preventDefault();
@@ -557,7 +623,7 @@ $(document).on("click", ".more_resident", function(ev) {
         //console.log(res_html);
         $("form").append(res_html);
         $.mobile.navigate("#household_resident-"+ind);
-        if (parseInt(ind) > 1) {
+        /* if (parseInt(ind) > 1) {
             console.log("CREATE HOUSEHOLD OPTIONS " + ind);
             ResidentRecord.get_head_household_link_choices(ind);
             ResidentRecord.get_marrital_status_choices(ind);
@@ -567,7 +633,7 @@ $(document).on("click", ".more_resident", function(ev) {
             ResidentRecord.get_occupation_situation_choices(ind);
             ResidentRecord.get_religion_choices(ind);
             ResidentRecord.get_handicap_choices(ind);
-        }
+        }*/
 });
 
 
