--- a/census/templates/census/sign-in.html
+++ b/census/templates/census/sign-in.html
@@ -88,7 +88,8 @@ $(document).ready(function () {
 
 {% block domready %}
 
-$("#btn-submit").click(function(e) {
+    $("#btn-submit").click(function(e) {
+        alert("in login");
         e.preventDefault();
         var form_data = $("form").serializeArray().reduce(
             function(obj, item) {
